Restructuring and C# components test.

--- a/WPF/WinUI3Islands.WPF/MainWindow.xaml
+++ b/WPF/WinUI3Islands.WPF/MainWindow.xaml
@@ -8,6 +8,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <toolkit:WindowsXamlHost ChildChanged="WindowsXamlHost_ChildChanged" InitialTypeName="Microsoft.UI.Xaml.Controls.Page"/>
+        <toolkit:WindowsXamlHost InitialTypeName="CSCustomComponents.CSUserControl"/>
     </Grid>
 </Window>
